--- a/pages/bcsrif/BCSRIF_2020_292.qmd
+++ b/pages/bcsrif/BCSRIF_2020_292.qmd
@@ -10,7 +10,7 @@ toc: true
 **Species Group:** Pacific Salmon  
 **Location:** Bella Coola  
 **Partners:** None listed  
-**Organization:** Not specified  
+**Organization:** Central Coast Indigenous Resource Alliance  
 **Session(s):** Fisheries Monitoring And Harvest Methods  
 **Presentation Date(s):** December 09, 2025  
 **Speakers:** Megan Adams  
