--- a/pages/bcsrif/BCSRIF_2022_399.qmd
+++ b/pages/bcsrif/BCSRIF_2022_399.qmd
@@ -1,7 +1,7 @@
 ---
-title: "Evaluating climate change scenarios for the Quesnel Watershed to determine flood, fire and temperature risks posed to Upper Fraser salmon stocks."
+title: "Evaluating climate change scenarios for the Quesnel Watershed to determine flood, fire and temperature risks posed to Upper Fraser salmon stocks"
 output-file: "BCSRIF_2022_399.html"
-Leads: "University of Northern British Columbia, Department of Geography, Earth and Environmental Sciences"
+Leads: "University of Northern British Columbia, Department of Geography, Earth and Environmental Sciences and UNBC’s Quesnel River Research Centre"
 toc: true
 ---
 
@@ -18,5 +18,5 @@ Fisheries and Oceans Canada - SEP & Science
 **Presentation Date(s):** December 02, 2025  
 **Speakers:** Ellen Petticrew  
 **Abstract:**  
-This project will focus on understanding the effects of climate change on salmon ecosystems and the direct effects of increasing water temperatures and wildfire-contaminated spawning habitat on interior Pacific salmon early life stages.  Improvements to hatchery infrastructure will aid Chinook enhancement and conservation efforts with collaborators at DFO and Upper Fraser Fisheries Conservation Alliance. Construction of a center of excellence will provide classroom/outreach space to provide First Nations training and community outreach, while specialized laboratory facilities will increase collaboration and salmon ecosystem research.  This project will build educational and research capacity, improve Chinook salmon culture and deliver to the adjustment of management protocols for existing Pacific salmon stocks in these areas and to the development of mitigations to address climate change.   
+This project will focus on understanding the effects of climate change on salmon ecosystems and the direct effects of increasing water temperatures and wildfire-contaminated spawning habitat on interior Pacific salmon early life stages. Improvements to hatchery infrastructure will aid Chinook enhancement and conservation efforts with collaborators at DFO and Upper Fraser Fisheries Conservation Alliance. Construction of a center of excellence will provide classroom/outreach space to provide First Nations training and community outreach, while specialized laboratory facilities will increase collaboration and salmon ecosystem research. This project will build educational and research capacity, improve Chinook salmon culture and deliver to the adjustment of management protocols for existing Pacific salmon stocks in these areas and to the development of mitigations to address climate change.   
 
