--- a/pages/bcsrif/BCSRIF_2020_292.qmd
+++ b/pages/bcsrif/BCSRIF_2020_292.qmd
@@ -9,11 +9,14 @@ toc: true
 
 **Species Group:** Pacific Salmon  
 **Location:** Bella Coola  
-**Partners:** None listed  
+**Partners:** Simon Fraser University, Wild Salmon Centre  
 **Organization:** Central Coast Indigenous Resource Alliance  
 **Session(s):** Fisheries Monitoring And Harvest Methods  
 **Presentation Date(s):** December 09, 2025  
 **Speakers:** Megan Adams  
 **Abstract:**  
 This project will focus on designing and implementing a coordinated strategy to fill data gaps related to Central Coast salmon populations which will inform management measures to promote sustainable opportunities for marine and Food Social Ceremonial fisheries.   
+
+**Collaborators:**  
+Kyle Wilson (Simon Fraser University), Will Atlas (Wild Salmon Centre)  
 
