--- a/pages/pssi/2413.qmd
+++ b/pages/pssi/2413.qmd
@@ -12,7 +12,7 @@ toc: true
 **Organization:** DFO  
 **Session(s):** Marine Stressors  
 **Presentation Date(s):** December 04, 2025  
-**Speakers:** Akash Sastri  
+**Speakers:** Akash Sastri, Kelly Young  
 **Abstract:**  
 Krill, a type of zooplankton, are a critical component of the marine food webs and important part of juvenile salmon diets. This ecosystem monitoring program collects krill on a monthly basis in two key feeding areas for early marine juvenile salmon along the west coast of Vancouver Island. We are monitoring how the amount and nutritional value (fats, protein and total energy) of krill varies with season and ocean conditions (temperature, salinity, and oxygen).    
 
