--- a/pages/bcsrif/BCSRIF_2019_058.qmd
+++ b/pages/bcsrif/BCSRIF_2019_058.qmd
@@ -13,7 +13,7 @@ toc: true
 Dr. Steve Cooke (Carleton University)
 Ocean Tracking Network Canada
 ... 24 in total from year-end report  
-**Organization:** Not specified  
+**Organization:** Pacific Salmon Ecology and Conservation Laboratory, UBC  
 **Session(s):** Fisheries Monitoring And Harvest Methods  
 **Presentation Date(s):** December 09, 2025  
 **Speakers:** Steve Johnston  
