--- a/pages/bcsrif/BCSRIF_2022_399.qmd
+++ b/pages/bcsrif/BCSRIF_2022_399.qmd
@@ -13,7 +13,7 @@ toc: true
 Horsefly River Roundtable
 Cariboo Envirotech 
 Fisheries and Oceans Canada - SEP & Science  
-**Organization:** University of Northern British Columbia, Department of Geography, Earth and Environmental Sciences  
+**Organization:** University of Northern British Columbia, Department of Geography, Earth and Environmental Sciences and UNBC’s Quesnel River Research Centre  
 **Session(s):** Salmon In A Changing Climate  
 **Presentation Date(s):** December 02, 2025  
 **Speakers:** Ellen Petticrew  
