--- a/pages/bcsrif/BCSRIF_2022_347.qmd
+++ b/pages/bcsrif/BCSRIF_2022_347.qmd
@@ -16,5 +16,6 @@ Wild Fish Conservancy
 **Presentation Date(s):** December 09, 2025  
 **Speakers:** Derek Leboeuf  
 **Abstract:**  
-A-Tlegay Fisheries Society proposed project involves the assessment, design, construction, and operatation of a tidal waters selective fishery salmon trap close to their traditional fishing sites in the Campbell/Quinsam rivers estuary on Vancouver Island. Historically, heart and chevron shaped traps were used extensively by First Nation communities along the estuary to capture adult salmon prior to the development of commercial fisheries. Recent revitalization of fish traps as a terminal fishery in other areas along the coast has been shown to be successfully at catching and selectively harvest hatchery marked salmon species while releasing wild (unmarked) salmon and steelhead of conservation concern. Partnering with We Wai Kai First Nation, Wei Wai Kum First Nation, LGL Limited, and the Wild Fish Conservancy; the initiative will develop First Nations’ capacity for sustainable salmon stewardship through the development of the best selective harvest fishing methods possible in traditional fishing areas while preserving wild stocks of conservation concern.   
+A-Tlegay Fisheries Society proposed project involves the assessment, design, construction, and operation of an estuarine waters selective fishery salmon trap close to their traditional fishing sites in the Campbell/Quinsam rivers estuary on Vancouver Island. Historically, heart and chevron shaped traps were used extensively by First Nation communities along the estuary to capture adult salmon prior to the development of commercial fisheries. Recent revitalization of fish traps as a terminal fishery in other areas along the coast has been shown to be successfully at catching and selectively harvest hatchery marked salmon species while releasing wild (unmarked) salmon and steelhead of conservation concern. Partnering with We Wai Kai First Nation, Wei Wai Kum First Nation, LGL Limited, and the Wild Fish Conservancy; the initiative will develop First Nations’ capacity for sustainable salmon stewardship through the development of the best selective harvest fishing methods possible in traditional fishing areas while preserving wild stocks of conservation concern.   
+
 
