--- a/pages/bcsrif/BCSRIF_2020_217.qmd
+++ b/pages/bcsrif/BCSRIF_2020_217.qmd
@@ -9,15 +9,12 @@ toc: true
 
 **Species Group:** Pacific Salmon  
 **Location:** Vancouver  
-**Partners:** Alberta Environment and Parks
-Fisheries and Oceans Canada (Freshwater Institute)
-BC Ministry of Environment
-Simon Fraser University
-  
+**Partners:** Nooaitch Band; Alberta Environment and Parks; Fisheries and Oceans Canada (Freshwater Institute); BC Ministry of Environment; Simon Fraser University; M.J. Bayly Analytics; and ESSA Environmental  
 **Organization:** University of British Columbia (Vancouver), Institute for the Oceans and Fisheries  
 **Session(s):** Freshwater Stressors  
 **Presentation Date(s):** December 02, 2025  
 **Speakers:** Jordan Rosenfeld  
 **Abstract:**  
 University of BC researchers and partners will develop a framework for modeling cumulative impacts on salmonid populations to guide recovery planning and adaptive management based on stressor-response functions related to multiple threats.   
+
 
