--- a/pages/pssi/2405.qmd
+++ b/pages/pssi/2405.qmd
@@ -24,6 +24,6 @@ Jan Finke, Travis Tai, Amber Holdsworth, Josie Iacarella, Dan Selbie, Greig Oldf
 <iframe src="../../data/PSSI_bulletin/2405.pdf" width="100%" height="800px" style="border: 1px solid #ccc; border-radius: 4px;"></iframe>
 
 <p style="text-align: center; margin-top: 10px;">
-[📅 Download PDF](../../data/PSSI_bulletin/2405.pdf){.btn .btn-primary target="_blank"}
+[📄 Download PDF](../../data/PSSI_bulletin/2405.pdf){.btn .btn-primary target="_blank"}
 </p>
 
