--- a/pages/pssi/2407.qmd
+++ b/pages/pssi/2407.qmd
@@ -24,6 +24,6 @@ Ahousaht First Nation, Ditidaht First Nation, Ehattesaht/Chinehkint First Nation
 <iframe src="../../data/PSSI_bulletin/2407.pdf" width="100%" height="800px" style="border: 1px solid #ccc; border-radius: 4px;"></iframe>
 
 <p style="text-align: center; margin-top: 10px;">
-[📅 Download PDF](../../data/PSSI_bulletin/2407.pdf){.btn .btn-primary target="_blank"}
+[📄 Download PDF](../../data/PSSI_bulletin/2407.pdf){.btn .btn-primary target="_blank"}
 </p>
 
