--- a/pages/pssi/2410.qmd
+++ b/pages/pssi/2410.qmd
@@ -21,6 +21,6 @@ Aquatic Invasive Species (AIS) continue to be introduced and expand their ranges
 <iframe src="../../data/PSSI_bulletin/2410.pdf" width="100%" height="800px" style="border: 1px solid #ccc; border-radius: 4px;"></iframe>
 
 <p style="text-align: center; margin-top: 10px;">
-[📅 Download PDF](../../data/PSSI_bulletin/2410.pdf){.btn .btn-primary target="_blank"}
+[📄 Download PDF](../../data/PSSI_bulletin/2410.pdf){.btn .btn-primary target="_blank"}
 </p>
 
