--- a/pages/pssi/2413.qmd
+++ b/pages/pssi/2413.qmd
@@ -21,6 +21,6 @@ Krill, a type of zooplankton, are a critical component of the marine food webs a
 <iframe src="../../data/PSSI_bulletin/2413.pdf" width="100%" height="800px" style="border: 1px solid #ccc; border-radius: 4px;"></iframe>
 
 <p style="text-align: center; margin-top: 10px;">
-[📅 Download PDF](../../data/PSSI_bulletin/2413.pdf){.btn .btn-primary target="_blank"}
+[📄 Download PDF](../../data/PSSI_bulletin/2413.pdf){.btn .btn-primary target="_blank"}
 </p>
 
