--- a/pages/pssi/2416.qmd
+++ b/pages/pssi/2416.qmd
@@ -25,6 +25,6 @@ Dr. Andrew Ross is a Research Scientist at the DFO Institute of Ocean Sciences i
 <iframe src="../../data/PSSI_bulletin/2416.pdf" width="100%" height="800px" style="border: 1px solid #ccc; border-radius: 4px;"></iframe>
 
 <p style="text-align: center; margin-top: 10px;">
-[📅 Download PDF](../../data/PSSI_bulletin/2416.pdf){.btn .btn-primary target="_blank"}
+[📄 Download PDF](../../data/PSSI_bulletin/2416.pdf){.btn .btn-primary target="_blank"}
 </p>
 
