--- a/pages/pssi/2421.qmd
+++ b/pages/pssi/2421.qmd
@@ -21,6 +21,6 @@ Chronic stress impacts fish health and can be measured in salmon by sampling hor
 <iframe src="../../data/PSSI_bulletin/2421.pdf" width="100%" height="800px" style="border: 1px solid #ccc; border-radius: 4px;"></iframe>
 
 <p style="text-align: center; margin-top: 10px;">
-[📅 Download PDF](../../data/PSSI_bulletin/2421.pdf){.btn .btn-primary target="_blank"}
+[📄 Download PDF](../../data/PSSI_bulletin/2421.pdf){.btn .btn-primary target="_blank"}
 </p>
 
