--- a/pages/pssi/2422.qmd
+++ b/pages/pssi/2422.qmd
@@ -29,6 +29,6 @@ LGL Ltd., Huu-ay-aht First Nation
 <iframe src="../../data/PSSI_bulletin/2422.pdf" width="100%" height="800px" style="border: 1px solid #ccc; border-radius: 4px;"></iframe>
 
 <p style="text-align: center; margin-top: 10px;">
-[📅 Download PDF](../../data/PSSI_bulletin/2422.pdf){.btn .btn-primary target="_blank"}
+[📄 Download PDF](../../data/PSSI_bulletin/2422.pdf){.btn .btn-primary target="_blank"}
 </p>
 
