--- a/pages/pssi/2424.qmd
+++ b/pages/pssi/2424.qmd
@@ -21,6 +21,6 @@ Predicting how much water fish need is a key management challenge in the face of
 <iframe src="../../data/PSSI_bulletin/2424.pdf" width="100%" height="800px" style="border: 1px solid #ccc; border-radius: 4px;"></iframe>
 
 <p style="text-align: center; margin-top: 10px;">
-[📅 Download PDF](../../data/PSSI_bulletin/2424.pdf){.btn .btn-primary target="_blank"}
+[📄 Download PDF](../../data/PSSI_bulletin/2424.pdf){.btn .btn-primary target="_blank"}
 </p>
 
