--- a/pages/pssi/2425.qmd
+++ b/pages/pssi/2425.qmd
@@ -21,6 +21,6 @@ Identifying individual and cumulative threats to salmon and their habitat is cri
 <iframe src="../../data/PSSI_bulletin/2425.pdf" width="100%" height="800px" style="border: 1px solid #ccc; border-radius: 4px;"></iframe>
 
 <p style="text-align: center; margin-top: 10px;">
-[📅 Download PDF](../../data/PSSI_bulletin/2425.pdf){.btn .btn-primary target="_blank"}
+[📄 Download PDF](../../data/PSSI_bulletin/2425.pdf){.btn .btn-primary target="_blank"}
 </p>
 
