--- a/pages/pssi/2435.qmd
+++ b/pages/pssi/2435.qmd
@@ -21,6 +21,6 @@ Chemical reactions in a salmon body decide which genes are expressed in a proces
 <iframe src="../../data/PSSI_bulletin/2435.pdf" width="100%" height="800px" style="border: 1px solid #ccc; border-radius: 4px;"></iframe>
 
 <p style="text-align: center; margin-top: 10px;">
-[📅 Download PDF](../../data/PSSI_bulletin/2435.pdf){.btn .btn-primary target="_blank"}
+[📄 Download PDF](../../data/PSSI_bulletin/2435.pdf){.btn .btn-primary target="_blank"}
 </p>
 
