--- a/pages/pssi/2437.qmd
+++ b/pages/pssi/2437.qmd
@@ -21,6 +21,6 @@ Pacific salmon genetic markers are regularly used to manage fisheries and hatche
 <iframe src="../../data/PSSI_bulletin/2437.pdf" width="100%" height="800px" style="border: 1px solid #ccc; border-radius: 4px;"></iframe>
 
 <p style="text-align: center; margin-top: 10px;">
-[📅 Download PDF](../../data/PSSI_bulletin/2437.pdf){.btn .btn-primary target="_blank"}
+[📄 Download PDF](../../data/PSSI_bulletin/2437.pdf){.btn .btn-primary target="_blank"}
 </p>
 
