--- a/pages/pssi/2442.qmd
+++ b/pages/pssi/2442.qmd
@@ -21,6 +21,6 @@ Okanagan Chinook are endangered due to habitat destruction and over-fishing. Juv
 <iframe src="../../data/PSSI_bulletin/2442.pdf" width="100%" height="800px" style="border: 1px solid #ccc; border-radius: 4px;"></iframe>
 
 <p style="text-align: center; margin-top: 10px;">
-[📅 Download PDF](../../data/PSSI_bulletin/2442.pdf){.btn .btn-primary target="_blank"}
+[📄 Download PDF](../../data/PSSI_bulletin/2442.pdf){.btn .btn-primary target="_blank"}
 </p>
 
