--- a/pages/pssi/2447.qmd
+++ b/pages/pssi/2447.qmd
@@ -21,6 +21,6 @@ Salmon experience a variety of physiological stressors and pathogens over migrat
 <iframe src="../../data/PSSI_bulletin/2447.pdf" width="100%" height="800px" style="border: 1px solid #ccc; border-radius: 4px;"></iframe>
 
 <p style="text-align: center; margin-top: 10px;">
-[📅 Download PDF](../../data/PSSI_bulletin/2447.pdf){.btn .btn-primary target="_blank"}
+[📄 Download PDF](../../data/PSSI_bulletin/2447.pdf){.btn .btn-primary target="_blank"}
 </p>
 
